Standardised bibtex keys

--- a/Articles/Buchanan_2000.bib
+++ b/Articles/Buchanan_2000.bib
@@ -1,4 +1,4 @@
-@article{buchanan2000potential,
+@article{Buchanan_2000,
   title={Potential of the Internet for personality research},
   author={Buchanan, Tom},
   journal={Psychological experiments on the Internet},
