--- a/Articles/Chandler_Mueller_Paolacci_2014.bib
+++ b/Articles/Chandler_Mueller_Paolacci_2014.bib
@@ -1,4 +1,4 @@
-@article{chandler2014nonnaivete,
+@article{Chandler_Mueller_Paolacci_2014,
   title={Nonna{\"\i}vet{\'e} among Amazon Mechanical Turk workers: Consequences and solutions for behavioral researchers},
   author={Chandler, Jesse and Mueller, Pam and Paolacci, Gabriele},
   journal={Behavior research methods},
