--- a/Articles/Choi_Fisman_Gale_Kariv_2007.bib
+++ b/Articles/Choi_Fisman_Gale_Kariv_2007.bib
@@ -1,4 +1,4 @@
-@article{choi2007revealing,
+@article{Choi_Fisman_Gale_Kariv_2007,
   title={Revealing preferences graphically: an old method gets a new tool kit},
   author={Choi, Syngjoo and Fisman, Raymond and Gale, Douglas M and Kariv, Shachar},
   journal={The American economic review},
