--- a/Articles/Cochrane_2005.bib
+++ b/Articles/Cochrane_2005.bib
@@ -1,4 +1,4 @@
-@book{cochrane2005writing,
+@book{Cochrane_2005,
   title={Writing tips for Ph. D. students},
   author={Cochrane, John H},
   year={2005},
