--- a/Articles/Cox_Swarthout_2005.bib
+++ b/Articles/Cox_Swarthout_2005.bib
@@ -1,4 +1,4 @@
-@article{cox2005econport,
+@article{Cox_Swarthout_2005,
   title={EconPort: Creating and maintaining a knowledge commons},
   author={Cox, James C and Swarthout, J Todd},
   journal={Andrew Young School of Policy Studies Research Paper},
