--- a/Articles/Farrell_Grenier_Leiby_2014.bib
+++ b/Articles/Farrell_Grenier_Leiby_2014.bib
@@ -1,4 +1,4 @@
-@article{farrell2014scoundrels,
+@article{Farrell_Grenier_Leiby_2014,
   title={Scoundrels or Stars? Theory and Evidence on the Quality of Workers in Online Labor Markets},
   author={Farrell, Anne M and Grenier, Jonathan H and Leiby, Justin},
   journal={Theory and Evidence on the Quality of Workers in Online Labor Markets (October 4, 2014)},
