--- a/Articles/Fischbacher_2007.bib
+++ b/Articles/Fischbacher_2007.bib
@@ -1,4 +1,4 @@
-@article{fischbacher2007z,
+@article{Fischbacher_2007,
   title={z-Tree: Zurich toolbox for ready-made economic experiments},
   author={Fischbacher, Urs},
   journal={Experimental economics},
