--- a/Articles/Friedman_Huck_Oprea_Weidenholzer_2012.bib
+++ b/Articles/Friedman_Huck_Oprea_Weidenholzer_2012.bib
@@ -1,4 +1,4 @@
-@article{friedman2012imitation,
+@article{Friedman_Huck_Oprea_Weidenholzer_2012,
   title={From Imitation to Collusion: Long-run Learning in a Low-Information Environment},
   author={Friedman, Daniel and Huck, Steffen and Oprea, Ryan and Weidenholzer, Simon},
   year={2012}
