--- a/Articles/Friedman_Huck_Oprea_Weidenholzer_2014.bib
+++ b/Articles/Friedman_Huck_Oprea_Weidenholzer_2014.bib
@@ -1,4 +1,4 @@
-@article{friedman2015imitation,
+@article{Friedman_Huck_Oprea_Weidenholzer_2014,
   title={From imitation to collusion: Long-run learning in a low-information environment},
   author={Friedman, Daniel and Huck, Steffen and Oprea, Ryan and Weidenholzer, Simon},
   journal={Journal of Economic Theory},
