--- a/Articles/Horton_Rand_Zeckhauser_2011.bib
+++ b/Articles/Horton_Rand_Zeckhauser_2011.bib
@@ -1,4 +1,4 @@
-@article{horton2011online,
+@article{Horton_Rand_Zeckhauser_2011,
   title={The online laboratory: Conducting experiments in a real labor market},
   author={Horton, John J and Rand, David G and Zeckhauser, Richard J},
   journal={Experimental Economics},
