--- a/Articles/Paolacci_Chandler_2014.bib
+++ b/Articles/Paolacci_Chandler_2014.bib
@@ -1,4 +1,4 @@
-@article{paolacci2014inside,
+@article{Paolacci_Chandler_2014,
   title={Inside the Turk Understanding Mechanical Turk as a Participant Pool},
   author={Paolacci, Gabriele and Chandler, Jesse},
   journal={Current Directions in Psychological Science},
