--- a/Articles/Paolacci_Chandler_Ipeirotis_2010.bib
+++ b/Articles/Paolacci_Chandler_Ipeirotis_2010.bib
@@ -1,4 +1,4 @@
-@article{paolacci2010running,
+@article{Paolacci_Chandler_Ipeirotis_2010,
   title={Running experiments on amazon mechanical turk},
   author={Paolacci, Gabriele and Chandler, Jesse and Ipeirotis, Panagiotis G},
   journal={Judgment and Decision making},
