--- a/Articles/Seithe_2012.bib
+++ b/Articles/Seithe_2012.bib
@@ -1,4 +1,4 @@
-@techreport{seithe2012introducing,
+@techreport{Seithe_2012,
   title={Introducing the Bonn Experiment System (BoXS)},
   author={Seithe, Mirko},
   year={2012},
