--- a/Articles/Williamson_2014.bib
+++ b/Articles/Williamson_2014.bib
@@ -1,4 +1,4 @@
-@misc{williamson2014ethics,
+@misc{Williamson_2014,
   title={On the Ethics of Crowd-sourced Research},
   author={Williamson, Vanessa},
   year={2014}
