--- a/Articles/Goodman_Cryder_Cheema_2013.bib
+++ b/Articles/Goodman_Cryder_Cheema_2013.bib
@@ -1,4 +1,4 @@
-@article{goodman2013data,
+@article{Goodman_Cryder_Cheema_2013,
   title={Data collection in a flat world: The strengths and weaknesses of Mechanical Turk samples},
   author={Goodman, Joseph K and Cryder, Cynthia E and Cheema, Amar},
   journal={Journal of Behavioral Decision Making},
