--- a/Articles/Horton_Chilton_2010.bib
+++ b/Articles/Horton_Chilton_2010.bib
@@ -1,4 +1,4 @@
-@inproceedings{horton2010labor,
+@inproceedings{Horton_Chilton_2010,
   title={The labor economics of paid crowdsourcing},
   author={Horton, John Joseph and Chilton, Lydia B},
   booktitle={Proceedings of the 11th ACM conference on Electronic commerce},
