--- a/Articles/Pettit_Friedman_Kephart_Oprea_2013.bib
+++ b/Articles/Pettit_Friedman_Kephart_Oprea_2013.bib
@@ -1,4 +1,4 @@
-@article{pettit2014software,
+@article{Pettit_Friedman_Kephart_Oprea_2013,
   title={Software for continuous game experiments},
   author={Pettit, James and Friedman, Daniel and Kephart, Curtis and Oprea, Ryan},
   journal={Experimental Economics},
