Paper: Running experiments section
Added first half of the ‘Running experiments’ section. Included
questions as comments. Updated bib database.

--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -24,6 +24,10 @@
   year={2013},
   publisher={Elsevier}
 }
+@article{Chen_Schonger_Wickens,
+  title={oTree-An Open-Source Platform for Laboratory, Online, and Field Experiments},
+  author={CHEN, DANIEL L and SCHONGER, MARTIN and WICKENS, CHRIS}
+}
 @article{Choi_Fisman_Gale_Kariv_2007,
   title={Revealing preferences graphically: an old method gets a new tool kit},
   author={Choi, Syngjoo and Fisman, Raymond and Gale, Douglas M and Kariv, Shachar},
@@ -85,6 +89,14 @@
   year={2013},
   publisher={Wiley Online Library}
 }
+@article{Hawkins_2014,
+  title={Conducting real-time multiplayer experiments on the web},
+  author={Hawkins, Robert XD},
+  journal={Behavior research methods},
+  pages={1--11},
+  year={2014},
+  publisher={Springer}
+}
 @inproceedings{Horton_Chilton_2010,
   title={The labor economics of paid crowdsourcing},
   author={Horton, John Joseph and Chilton, Lydia B},
@@ -113,6 +125,16 @@
   year={2009},
   publisher={Elsevier}
 }
+@article{Oprea_Henwood_Friedman_2011,
+  title={Separating the Hawks from the Doves: Evidence from continuous time laboratory games},
+  author={Oprea, Ryan and Henwood, Keith and Friedman, Daniel},
+  journal={Journal of Economic Theory},
+  volume={146},
+  number={6},
+  pages={2206--2225},
+  year={2011},
+  publisher={Elsevier}
+}
 @article{Paolacci_Chandler_2014,
   title={Inside the Turk Understanding Mechanical Turk as a Participant Pool},
   author={Paolacci, Gabriele and Chandler, Jesse},
@@ -133,6 +155,16 @@
   year={2010}
 }
 @article{Pettit_Friedman_Kephart_Oprea_2013,
+  title={Software for continuous game experiments},
+  author={Pettit, James and Friedman, Daniel and Kephart, Curtis and Oprea, Ryan},
+  journal={Experimental Economics},
+  volume={17},
+  number={4},
+  pages={631--648},
+  year={2014},
+  publisher={Springer}
+}
+@article{Pettit_Friedman_Kephart_Oprea_2014,
   title={Software for continuous game experiments},
   author={Pettit, James and Friedman, Daniel and Kephart, Curtis and Oprea, Ryan},
   journal={Experimental Economics},
