Paper: Running and Results section
Added second half of the running experiments section. And added the
results section.

--- a/Latex/paper.tex
+++ b/Latex/paper.tex
@@ -73,6 +73,7 @@ Subjects access \Cree experiments though an web browser. Any modern web browser 
 \footnotetext[2]{A modern web browser is either: IE version 9+, Chrome current version, Firefox current version, OSX Safari version 5.1+, Opera version 12.1+, iOS Safari version 6.1+, or Android Browser version 4.0+. The browser must allow JavaScript, which all browsers due by default. \Cree automatically check that these requirements are met, before the subject is allowed to enter the experiment.}
 
 \subsection{Alternative toolboxes}
+\label{SS:Alternatives}
 % What are the alternative toolboxes and how do they compare to Cree?
 
 \emph{z-Tree} is currently the commonly used toolbox for conducting economic experiments. The development of \emph{z-Tree} started in 1995 and has been updated continuously \citep{Fischbacher_2007}. However the foundation and guiding principles of \emph{z-Tree} is based on the technology that was available two decades ago. Several other toolboxes exist that can run economic experiments. Below I divide the the toolboxes into four categories based on the restrictions they places on the equipment facing subjects:
@@ -170,9 +171,41 @@ In sum the researcher needs to carefully consider the selection process, to ensu
 
 There are two alternative approaches, regarding time and duration, that the researchers might consider when designing the experiment. One is the approach of \citet*{Pettit_Friedman_Kephart_Oprea_2014} which speeds up the adjustment process by allowing subjects to continuously change and adapt strategies. They refer to one study where distinctive, long-term implications are observable in rounds lasting only 120 seconds. The other approach, suggested by \cite{Charness_Gneezy_Kuhn_2013}, is to create long time-series data, ie. by recalling subjects every day, week or month. In a traditional laboratory experiment, this would be time consuming and highly inconvenient for subjects, but less so in extra-laboratory settings such as classrooms or over the internet. \cite[p. 96]{Charness_Gneezy_Kuhn_2013} argue that \emph{``the classic 10–20 period repetition of the public-goods game may not be a good analog for the expression of preference for tax policy that citizens make when they vote every couple of years''}. \Cree can execute both alternative approaches, since it allows real-time interaction among subjects and works in \emph{extra-laboratory} settings.
 
+\subsection{Payment}
+% How do you handle payment if experiments are run over the internet?
 
-\section{Expected results}
+For in-person experiments the researcher can pay subjects in cash. For experiments conducted over the internet payment will require a third-party payment provider. This could be national provides, such as the danish \emph{MobilePay} or \emph{Swipp}. Or it could be international providers such as \emph{PayPal}. When a third-party payment provider is used, subjects will enter their mobile phone number, email address, or receive a voucher code they can use to claim their payment. At the end of every session \Cree generates a list with the payment for every subject, and with the respective payment method and transfer details.
+
+\subsection{Questions}
+% What if subjects have questions on instructions or during the experiment? 
+
+Subjects may have questions regarding instructions or procedures during the experiment. In supervised in-person experiments, the experimenter can walk around and answer these questions. For experiments conducted over the internet, \Cree offers the researcher the option to include a real-time chat function at specific stages of the experiment. Using this chat function subjects can privately ask the experimenter questions and receive answers. However this should be a fallback option reserved for special cases, as it may lead to unintended \emph{experimenter effects}, ie. subjects trying to please the experimenter, rather than behaving intrinsically. Instead researchers should first take all the necessary provisions \citep{Guala_2005}; insure that instructions, and procedures are clear and easily understandable, run trail experiments, and if necessary adjust instructions or simplify the experimental design. Alternatively the researcher can use instructional checks, ie. test if the subjects correctly understood instructions, before allowing them to proceed further in the experiment.
+
+\subsection{Cheating}
+% How to avoid cheating?
+
+Discouraging cheating in unsupervised experiments is difficult. And additional considerations are needed since subjects participate in experiments using a web browser. First, \cite{Goodman_Cryder_Cheema_2013} have shown that \emph{Mechanical Turk} subjects search for the correct answers to factual questions on the internet. Subjects look up answers, even when payment is independent of answering correctly. And when subjects are paid for the correct answer, they are more likely to look up the answer. Asking subjects not to use any externals sources reduces the number of subjects that look up the answer, but it does not completely eliminate cheating. Secondly, toolboxes that are native to the web browser are at a disadvantage compared to the toolboxes in the three other categories (discussed in section~\ref{SS:Alternatives}), since pages are rendered in the subject's web browser. Thus the source code to the unrendered pages is easily viewable and relatively easy to manipulate \citep[25m. 12s.]{Hawkes_2011}. In \Cree Subjects cannot cheat by manipulating how the page is rendered, since the server has final authority and controls the experiment. But subjects may attempt to cheat by sending false or manipulated inputs back to the server. It is therefore crucial, when the researcher designs the experiment, that all inputs are validated on the server. In addition since the source code of the page is accesable, it should not contain information that disclose the purpose of the experiment, the treatment, nor optimal strategies -- eg. instead of using variables names such as \texttt{Option\_Nash\_Equilibrium} and \texttt{Option\_Sub\_Optimal}, the researcher should use generic names such as \texttt{OptionX} and \texttt{OptionY}. A third issue is coercion among subjects. Coercion may arise in unsupervised in-person experiments were subjects are seated closely (ie. classrooms, work places, etc.), or in internet experiments were subjects are able to self-select into the experiment, and therefore invite others to join with the aim of manipulating the experiment. In \Cree the researcher can randomise subjects across groups, roles and treatments, but other than this \Cree cannot alleviate coercion. If possible it is recommended that in-person experiments are supervised. And researchers should limit the subject's ability to self-select into the experiment, when conducting experiments over the internet. 
+
+
+\section{Results}
 \label{S:Results}
+
+\subsection{Expectations}
+% How do experiments run in the lab and over the internet compare?
+
+\cite{Charness_Gneezy_Kuhn_2013} look across different studies and compare the results from  laboratory settings to those from \emph{extra-laboratory} settings. In the \emph{Ultimatum game}, studies in the laboratory have not been able to find a relationship between the stakes (ie. the amount of money that the subjects can split) and the frequency of rejections. Whereas an \emph{extra-laboratory} study in villages in rural India find that higher stakes leads to less frequent rejections. Laboratory studies on the \emph{Public-goods} game yields the same results as a \emph{extra-laboratory} study among card traders at a sports-card event. In the \emph{Trust game}, a study using respectively students in a laboratory and users from the online game \emph{Second Life}, find that subjects from the gaming community are more willing to pay a social-distance premium, and that second movers pass higher amounts back. Another study looks at the closely related \emph{lost-wallet} game. This study finds few differences in the results across their three environments; laboratory, classroom and online. With regard to risk and time preferences, a laboratory study among US students elicit discount rates that are twice as high as credit card rates. Whereas an \emph{extra-laboratory} study using a representative sample of Danish adults elicit discount rates that are above mortgage and auto rates, but below credit card rates. In laboratory settings subjects show high aversion to risk. However a \emph{extra-laboratory} study among evacuees of Hurricane Katrina living in shelters, establish risk-seeking behaviour. Repeating the study a year later with a similar population shows that this behaviour diminishes over time. As noted earlier \cite{Goodman_Cryder_Cheema_2013} find that \emph{Mechanical Turk} subjects are not significantly different in their behaviour from traditional samples, except in one study on risk aversion.
+
+This short walkthrough indicates that the behaviour observed in laboratories for most part also holds outside of the laboratory. But perhaps not in other cultures, or with extremely high pay outs (such as rural India). Similarly social preferences differ when subjects self-identify with a community (the gamers). And the researcher should be particular observant of the selection process when conducting experiments on risk or time preferences, since both age and circumstances will affect experimental results.
+
+\subsection{Devices}
+% Will the results of my experiment depend on the devices used by subjects
+
+There is yet no research on how or if results are influenced by the devices used by subjects in experiments. \Cree records the type of device used by subjects, as well as the screen size. The researcher can use this to post hoc control for differences in the results. Alternatively the researcher can a priori exclude specific devices from participating in the experiment. This may be particular useful in experiments where the subject's reaction time is critical (such as experiments on auctions). I expect that subjects using smart-phones react slower, than subjects on other types of devices. In part due to lower processing power and screen size, but also due to the different input method. The screen, keyboard and mouse are separated on a computer, while on a smart-phone the mouse and keyboard are built into a screen, that only covers about one-fourteenth of the area of a computer screen. Subjects with a smart-phone would be at a disadvantage when entering text or numbers repetitively and at length, or when constantly having to switch between keyboard and pointing. Another alternative is levering the playing field, by using similar input method across all devices. \cite{Choi_Fisman_Gale_Kariv_2007} proposed using a graphical interface. Fore instance, if the subject is asked to allocate an amount to consumption out of a budget of \$100. Then instead of entering this amount into a form, there is a line graphically representing the \$100 budget, and the subject simply clicks accordingly on the line to input his or her allocation. Similar method has also been implemented by \cite{Pettit_Friedman_Kephart_Oprea_2014} in the \emph{ConG} toolbox. \Cree leverages the JavaScript library \emph{D3.js} to build graphics.
+
+\subsection{Control}
+% How do I correctly exclude/control for participant characteristics?
+
+The researcher can control for differences among subjects post hoc. \citet[p. 121]{Chandler_Mueller_Paolacci_2014} are strongly critical of this approach. They estimate that more than a third of all peer-review papers using \emph{Mechanical Turk} drop subjects post hoc for one reason or another. They describe this an \emph{``arbitrary data-cleaning strategy''} and that researchers are \emph{``too eager to exclude workers post hoc''}. They propose a less subjective approach where researchers adjust their selection process, so subjects are excluded a priori. In particular they propose using prescreening surveys that elicit demographic characteristics, psychological attributes, attentiveness, and ability to solve tasks that are crucial to completing the actual experiment. \Cree does not include a prescreening system to manage the pool of subjects. It offers researchers only a few basic options to exclude subjects a priori. The researcher can choose to allow only one subject per IP address, can provide a list of IP addresses to exclude, and can provide a list of devices to exclude. The researcher will need to employ a third-party prescreening system, for more elaborate a priori exclusion criteria.
 
 \section{Designing experiments}
 \label{S:Designing}
@@ -180,9 +213,10 @@ There are two alternative approaches, regarding time and duration, that the rese
 \section{Conclusion}
 \label{S:Conclusion}
 
+\newpage
 
 %% References
-\bibliographystyle{apalike}
+\bibliographystyle{apalike-url}
 \raggedright
 \singlespacing
 \bibliography{references.bib}
