--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -89,7 +89,23 @@
   year={2013},
   publisher={Wiley Online Library}
 }
-@article{Hawkins_2014,
+@incollection{Guala_2005,
+author = "Francesco Guala",
+title = {Inside the Laboratory}, 
+booktitle = {The Methodology of Experimental Economics}, 
+publisher = {Cambridge University Press}, 
+year = {2005},
+pages = {13--38},
+isbn = {9780511614651}, 
+note = {Cambridge Books Online}
+}
+@unpublished{Hawkes_2011,
+title= {Rawkets: An inside look at a multiplayer {HTML5} game},
+author = {Rob Hawkes},
+year = {2011},
+note= {Google Tech Talk},
+URL= {https://youtu.be/zj1qTrpuXJ8?t=25m12s},
+}@article{Hawkins_2014,
   title={Conducting real-time multiplayer experiments on the web},
   author={Hawkins, Robert XD},
   journal={Behavior research methods},
